# pyamlo

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  run_coverage.sh  sitemap.xml  test-requirements.txt  test_new_functionality.py
.github/workflows/: coverage.yml  docs.yml  publish.yml  test.yml
best-practices/: index.html
docs/: api.md  best-practices.md  examples.md  faq.md  features.md  ignite.md  index.md  keras.md  lightning.md  pytorch-ignite.md  pytorch-lightning.md  security.md
examples/: example.yml  index.html  math_expressions.yaml  run_example.py  test_config.yaml  training.yml
examples/ignite/: device.yml  evaluator.yml  run_modular.yml  run_monolithic.yml  train.yml  trainer.yml
examples/ignite/datasets/: mnist.yml  selector.yml
examples/ignite/evaluators/: selector.yml  supervised.yml
examples/ignite/models/: cnn.yml  selector.yml
examples/ignite/models/architectures/: cnn.yml  resnet.yml
examples/ignite/trainers/: selector.yml  supervised.yml
examples/keras/: keras_utils.py  train.yml
examples/keras/datasets/: mnist.yml
examples/keras/models/: cnn.yml
examples/lightning/: README.md  mnist.yml  mobilenet.yml  simple_cnn.py  train.yml
examples/pyamlotorch/: inference.yml  train.yml
examples/pyamlotorch/models/: faster_rcnn.yml
examples/stagecoach/stages/: stage1.yml  stage2.yml
faq/: index.html
features/: index.html
ignite/: index.html
keras/: index.html
lightning/: index.html
pyamlo/: __init__.py  __main__.py  cli.py  config.py  expressions.py  include.py  merge.py  override.py  resolve.py  security.py  sources.py  tags.py
pytorch-ignite/: index.html
pytorch-lightning/: index.html
search/: search_index.json
security/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_bitwise_expressions.py  test_cli.py  test_cli_main.py  test_conditional_expressions.py  test_dict_sources.py  test_env.py  test_errors.py  test_full_config_output.py  test_import_wildcard_security.py  test_include_at.py  test_include_from.py  test_include_from_underscore_wildcard.py  test_include_wildcard_security.py  test_includes.py  test_interpolated_dollar_syntax.py  test_interpolation.py  test_math_expressions.py  test_multiple_configs.py  test_named_instances.py  test_nested_interpolation_bug.py  test_object_creation_security.py  test_objects.py  test_security_policy.py
tests/configs/: base.yaml  base_config.yml  conditionals.yml  includes.yml  main.yaml  objects.yaml  override_config.yml
yamlo/: __about__.py  __init__.py  __main__.py  config.py  merge.py  tags.py
